# weather_study

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: import_csv.ipynb  import_weather_data.ipynb  lwd_weather_data copy.ipynb
terminal/: terminal1.md
